# AgenticAI

./: .gitignore  pyproject.toml  requirements.txt
1-Pydantic/: pydantic.ipynb
2-Langchain Basics/2-Langchain Basics/: gettingstartedlangchain.ipynb  test.ipynb
2-Langchain Basics/2-Langchain Basics/2.1-DataIngestion/: dataingestion.ipynb
2-Langchain Basics/2-Langchain Basics/2.2-DataTransformer/: 2.2.1-Recurssivetextsplitter.ipynb
2-Langchain Basics/2-Langchain Basics/2.3-Embeddings/: speech.txt
2-Langchain Basics/2-Langchain Basics/2.4-VectorDatabase/FAISS/: code.ipynb
2-Langchain Basics/2.3-Embeddings/: 2.3.1-embeddings.ipynb  2.3.2-huggingface.ipynb
2-Langchain Basics/2.4-VectorDatabase/FAISS/todays' class faiss index/: index.faiss  index.pkl
