[project]
name = "yes"
version = "0.1.0"
description = ""
authors = [
    {name = "Sanjukta2212",email = "sanjuktabaruahgithub@gmail.com"}
]
requires-python = ">=3.10,<4.00"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-huggingface (>=1.2.1,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
